// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing components Contact me button 1`] = `
.c0 {
  color: #008080;
  cursor: pointer;
  margin: 4px;
  padding: 4px;
}

.c1 {
  background: #008080;
  border-radius: 4px;
  text-align: center;
  color: #fff;
  -webkit-transition: 0.2s linear;
  transition: 0.2s linear;
}

.c1:hover {
  background: #4cb0af;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="c0 c1"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  Contact
</a>
`;

exports[`Testing components Header 1`] = `
.c1 {
  color: #008080;
  cursor: pointer;
  margin: 4px;
  padding: 4px;
}

.c2 {
  font-family: "Oleo Script",cursive;
  font-size: 24px;
  margin: 0;
  padding: 0;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  background: #008080;
  border-radius: 4px;
  text-align: center;
  color: #fff;
  -webkit-transition: 0.2s linear;
  transition: 0.2s linear;
}

.c4:hover {
  background: #4cb0af;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  top: 0;
  z-index: 1000;
  background: white;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  width: 100%;
}

@media screen and (max-width:768px) {
  .c3 {
    width: 100%;
  }
}

@media screen and (max-width:768px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: space-evenly;
    -webkit-justify-content: space-evenly;
    -ms-flex-pack: space-evenly;
    justify-content: space-evenly;
    position: absolute;
  }
}

<div
  className="c0"
  id="top"
>
  <a
    className="c1 c2"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Adeola Ade
  </a>
  <nav
    className="c3"
  >
    <a
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      About
    </a>
    <a
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Showcase
    </a>
    <a
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Resources
    </a>
    <a
      className="c1 c4"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Contact
    </a>
  </nav>
</div>
`;

exports[`Testing components Header wrapper 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  top: 0;
  z-index: 1000;
  background: white;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  width: 100%;
}

@media screen and (max-width:768px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: space-evenly;
    -webkit-justify-content: space-evenly;
    -ms-flex-pack: space-evenly;
    justify-content: space-evenly;
    position: absolute;
  }
}

<div
  className="c0"
/>
`;

exports[`Testing components Logo 1`] = `
.c0 {
  color: #008080;
  cursor: pointer;
  margin: 4px;
  padding: 4px;
}

.c1 {
  font-family: "Oleo Script",cursive;
  font-size: 24px;
  margin: 0;
  padding: 0;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="c0 c1"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  Adeola Ade
</a>
`;

exports[`Testing components Nav 1`] = `
.c1 {
  color: #008080;
  cursor: pointer;
  margin: 4px;
  padding: 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

@media screen and (max-width:768px) {
  .c0 {
    width: 100%;
  }
}

<nav
  className="c0"
>
  <a
    className="c1"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    About
  </a>
</nav>
`;

exports[`Testing components Renders links appropriately 1`] = `
.c0 {
  color: #008080;
  cursor: pointer;
  margin: 4px;
  padding: 4px;
}

<a
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  About
</a>
`;
